SOP-35 - Generic SBT Task to Create Files (#51)
* Adds a generic sbt task to create files according to the project config

* Changes the return type by its correct type alias